[package]
name = "wacky_bag_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
derive_more = {version = "2.0.1",features = ["add","add_assign","not","deref","deref_mut","from","into","mul","mul_assign"]}
frunk = "0.4.4"
rand = "0.9.2"

wacky_bag = {path="../wacky_bag"}
wacky_bag_fixed = {path="../wacky_bag_fixed"}
physics_basic = {path="../physics_basic"}
statistic_physics = {path="../statistic_physics"}